Version: V0.3B1 Date: Thu Aug 11 06:20:13 2005 +++++++++++++++++++++++++++++++
+ Begin Workbench framework redesign
+ BUG 1216922 fixed (Bug with active document)

Version: V0.3B2 Date: Tue Sep 20 11:42:39 2005 +++++++++++++++++++++++++++++++
+ Workbench redesign finished (RFE 1110586)
+ ApplicationWindow splitted in Application and MainWindow
+ Avoid to execute features twice (e.g. if AbortException was thrown)
+ disable catch(...)-block in Debug mode
+ bug fixed in Fullscreen command
+ add API to MacroManger to specify recording of Gui stuff
+ catch AbortException in MeshIO::Load and pass it through the calling instance
+ catch AbortException in MeshImportFeature
+ Mesh command to calc. curvature in Python
+ bugs fixed in MeshGui::ViewProviderMesh
+ bug fixed in MeshGui::ViewProviderCurvature
+ Load Python scripts and macros per File|Open
+ MDIView stuff (tabs renaming, layout)
+ Python icon for text files
+ check for already opened macros, scripts and Python files
+ template stuff
+ Bug fixed in MenuManager (remove each menu separately, do not call QMenuBar::clear() to prevent window buttons from being removed)

Version: V0.3B3 Date: Tue Oct  4 10:04:27 2005 +++++++++++++++++++++++++++++++
+ ability to hide workbenches in the combobox
+ added class DockConrainer to embed all kind of widgets
+ ability to define dock windows in main()
+ bug fixed in WaitCursor (override/restore waitcursor only once if several instances of WaitCursor exist at a time)
+ add new dialog to define own shortcuts
+ added Build directory and installer files
+ bug with start workbench fixed (in case if user defined start workbench is hidden)
+ Allow to open a determined page from preferences dialog
+ add context menu to tabs
+ start closing documents 
+ fixing toogle visibility
+ reimplement hide show