@@ -125,6 +125,11 @@ void View3DInventor::contextMenuEvent ( QContextMenuEvent * e)
 
 }
 
+void View3DInventor::setFullScreenMode( bool b )
+{
+  _viewer->setEnableBackgroundImage( !b );
+  MDIView::setFullScreenMode( b );
+}
 
 void View3DInventor::setViewerDefaults(void)
 {
