@@ -91,6 +91,15 @@ public:
 
   View3DInventorViewer *getViewer(void) {return _viewer;}
 
+  /**
+   * If \a b is true the Inventor view is displayed in full screen mode, otherwise
+   * in normal mode. For more hints refer to the Qt documentation to
+   * QWidget::showFullScreen ().
+   * If the view has a background image ihen this image gets disabled in full screen
+   * mode and gets restored in normal mode.
+   */
+  virtual void setFullScreenMode( bool b );
+
 //signals:
   //void message(const QString&, int );
 
